Consolidate builder tests